include error handling and validation

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -7,4 +7,5 @@
     <mat-card-content>
         <p>Type: {{movie?.Type}}</p>
     </mat-card-content>
+    <p *ngIf="errorExist">Cannot find movie details!</p>
 </mat-card>
