--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -6,5 +6,6 @@
     </div>
     <div class="search__results">
         <app-movie-card *ngFor="let movie of searchResult" [movie]="movie" [needFullPlot]="fullPlot"></app-movie-card>
+        <p *ngIf="errorExist">No movies found!</p>
     </div>
 </div>
