--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -12,6 +12,9 @@
         border-radius: 5px 0 0 5px;
         outline: none;
     }
+    input:invalid {
+        border: 2px solid $red;
+    }
     .search-bar__submit {
         width: 40px;
         height: 36px;
