--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -2,6 +2,7 @@ $white: #ffffff;
 $light-grey: #e3e3e3;
 $dark-grey: #333333;
 $black: #000000;
+$red: #ff0000;
 
 // tablet version min width
 $screen-md-min: 720px;
