--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="backgroud accent movie-card" (click)="getMovieDetailsForId(movie?.imdbID)">
+<mat-card class="backgroud accent movie-card" (click)="getMovieDetailsForId()">
     <mat-card-header>
         <mat-card-title>{{movie?.Title}}</mat-card-title>
         <mat-card-subtitle>{{movie?.Year}}</mat-card-subtitle>
