refactor and format code

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,10 @@
 <nav class="header">
-    <ul class="header__menu">
-        <li><a [routerLink]="['/search']" routerLinkActive="header__menu--active">Movie Hunt</a></li>
-        <li><a [routerLink]="['/featured']" routerLinkActive="header__menu--active">Featured</a></li>
-    </ul>
+  <ul class="header__menu">
+    <li>
+      <a [routerLink]="['/search']" routerLinkActive="header__menu--active">Movie Hunt</a>
+    </li>
+    <li>
+      <a [routerLink]="['/featured']" routerLinkActive="header__menu--active">Featured</a>
+    </li>
+  </ul>
 </nav>
