--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -1,4 +1,7 @@
-<div class="featured" >
-    <app-movie-card *ngFor="let movie of featuredMovies" [movie]="movie"></app-movie-card>
-    <p *ngIf="errorExist">Movie not found!</p>
-</div> 
+<div class="featured">
+  <app-movie-card
+    *ngFor="let movie of featuredMovies"
+    [movie]="movie"
+  ></app-movie-card>
+  <p *ngIf="errorExist">Movie not found!</p>
+</div>
