--- a/src/app/components/movie-detail/movie-detail.component.scss
+++ b/src/app/components/movie-detail/movie-detail.component.scss
@@ -1,24 +1,20 @@
 @import "../../shared/styles/variables";
 
 .movie-detail {
-    .movie-detail__wrapper {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    @media (min-width: $screen-md-min) {
+        flex-direction: row;
     }
-    .movie-detail__img {
-        width: 100%;
+  }
+  &__img {
+    width: 100%;
+    @media (min-width: $screen-md-min) {
+       width: auto;
     }
+  }
 }
 
-/* Tablet & Desktop */
-@media (min-width: $screen-md-min) {
-    .movie-detail {
-        .movie-detail__wrapper {
-            flex-direction: row;
-        }
-        .movie-detail__img {
-            width: auto;
-        }
-    }
-}
+
