--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   &__input {
-    width: 100%;
+    width: calc(100% - 40px);
     border: 3px solid $dark-grey;
     border-right: none;
     padding: 5px;
