--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -16,11 +16,13 @@
     border: 2px solid $red;
   }
   &__submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 36px;
     border: 1px solid $dark-grey;
     background: $dark-grey;
-    text-align: center;
     color: $white;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
